--- a/resources/views/Tour/show.html.twig
+++ b/resources/views/Tour/show.html.twig
@@ -45,7 +45,7 @@
                         <div class="row clearfix">
                             <div class="col col_1_2 ">
                                 <div class="inner">
-                                    <h2 style="color: #B28E1B">ITINERARY AT GLANCE</h2>
+                                    <h2 style="color: #B28E1B">DETAILED TOUR ITINERARY</h2>
                                     {% if tour.itinerary is defined %}
                                         <div class="short_itinerary">
                                             {{ tour.itinerary|raw }}
