--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -70,7 +70,7 @@
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
 
-                            <h2 style="color: #B28E1B; margin-top: 20px; ">ITINERARY AT GLANCE</h2>
+                            <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
                                 <div class="box_title">Day 1 Arrival in Ulaanbaatar</div>
