--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -34,7 +34,7 @@
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Naadam Festival Journey</a></h3>
                             <div class="info_row"><span>DURATION:</span> 12 days, 11 nights</div>
-                            <div class="info_row"><span>AVAILABLE:</span> July 2 - July 13</div>
+                            <div class="info_row"><span>AVAILABLE:</span> 2-13th of July</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">VIEW DETAILS</a></div>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="special_text">
                             <h3><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia</a></h3>
-                            <div class="info_row"><span>DURATION:</span> 16 days, 15 nights</div>
+                            <div class="info_row"><span>DURATION:</span> 14 days, 13 nights</div>
                             <div class="info_row"><span>AVAILABLE:</span> May 01-October 1</div>
                             <div class="special_price"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">VIEW DETAILS</a></div>
                         </div>
