--- a/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
@@ -70,7 +70,7 @@
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
 
-                            <h2 style="color: #B28E1B; margin-top: 20px; ">ITINERARY AT GLANCE</h2>
+                            <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
                                 <div class="box_title">Day 1 Arrive Ulaan Baatar</div>
@@ -100,7 +100,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 6      Hovsgol Lake Hiking and Wildlife</div>
+                                <div class="box_title">Day 4      Hovsgol Lake Hiking and Wildlife</div>
                                 <div class="box_content">
                                     <p>After breakfast at the camp you will have a full day to explore the breathtaking shores of this beautiful lake.  There is ample opportunity to discover the local nomadic lifestyle. You can plan hiking and photo ventures along the shorelines, which are excellent habitats for wildlife and birds.
                                         <br/> Walking and hiking in the lake shores, Horse riding trek near the lake, visiting yak breeding family and experience their unique lifestyle
@@ -111,7 +111,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 7   Moron to Ulaan Baatar, </div>
+                                <div class="box_title">Day 5   Moron to Ulaan Baatar, </div>
                                 <div class="box_content">
                                     <p>Drive to airport after breakfast. Take the flight back to Ulaanbaatar and transfer to hotel.
                                         <br/> Rest of the day is for rest and dinner at local restaurant in Ulaanbaatar.
@@ -122,7 +122,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 8 Fly to the Gobi Desert (1.2 hours) and then drive to Yol Valley and Gurvan saikhan National Park </div>
+                                <div class="box_title">Day 6 Fly to the Gobi Desert (1.2 hours) and then drive to Yol Valley and Gurvan saikhan National Park </div>
                                 <div class="box_content">
                                     <p>In the morning, we drive to airport for flight to Gobi, one of the most famous and exotic areas in the world. The Gobi occupies about one-third of Mongolia and consists of sand dunes and dry mountain ranges. As one of the harshest environments on earth with extreme temperature and seasonal changes, the Gobi is surprisingly full of wildlife such as white and blacktail gazelles, wild ass or “hulan” in Mongolian, wild camel or “havtgai”, antelopes, ibex, and argali sheep, the biggest wild sheep on the planet. The majority of Mongolia’s population of bactrian camels live in this area, and you can take a camel ride if you like. Upon arrival, transfer to the base camp at the Gobi. You may visit the Yol Valley National Park for a morning trek with opportunities to photograph the stunning landscape, “Gobi Glacier”, and intriguing wildlife. </p>
                                     <p><strong><em>Overnight in Ger Camp,  <br/>Meals: Breakfast, lunch and dinner </em></strong></p>
@@ -131,7 +131,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 9 Drive to Khongor sand dune </div>
+                                <div class="box_title">Day 7 Drive to Khongor sand dune </div>
                                 <div class="box_content">
                                     <p>Today we will drive to Khongorinn Els sand dunes, the largest sand dunes in Mongolia. These dunes lie in the Gobi Gurvan Saikhan National Park. The drive is through some incredible desert scenery with flat, stony plains; outcrops of vegetation; hills of interesting rock formations; and herds of wild antelope racing across the plains. The roads are flat and fairly even so it will take at least 4 hours. The shifting sand blown by the wind or someone makes sound so it is called Singing Sand Dunes. </p>
                                     <p><strong><em>Overnight in the Ger Camp  <br/> Meals: Breakfast, lunch and dinner</em></strong></p>
@@ -140,7 +140,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 10 Khongor Sand Dune</div>
+                                <div class="box_title">Day 8 Khongor Sand Dune</div>
                                 <div class="box_content">
                                     <p>Today we will have a full day exploring the sand dunes and rest after the long drive. The dunes seem to stretch on forever like a soft ribbon of sand draped over the desert. The shifting sand blown by the wind or someone makes sound so it is called Singing Sand Dunes. There is a beautiful green oasis known as Seruun bulag near the Khongor River. Return to the camp for lunch and enjoy feeling silence and a peaceful in the beautiful surroundings Gobi Deserts.</p>
                                     <p><strong><em>Overnight in the Ger Camp  <br/> Meals: Breakfast, lunch and dinner</em></strong></p>
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 11 Khongor sand dunes to Bayanzag (Flaming Cliffs)</div>
+                                <div class="box_title">Day 9 Khongor sand dunes to Bayanzag (Flaming Cliffs)</div>
                                 <div class="box_content">
                                     <p>Drive to Bayanzag which is located 20 kilometers far from Bulgan soum, where 70 million years ago a lot of Paleontological findings have been discovered. The place is known as Flaming Cliffs so named by Roy Chapman Andrews American explorer who had visited Mongolia in 1922. During two years he searched through the Mongolian Gobi Desert and he found dinosaur fossils and dinosaur eggs about 10-15 cm from the Bayanzag for the first time in the world. Visiting and exploring native land of dinosaurs and taking some photos for beautiful surroundings. </p>
                                     <p><strong><em> Overnight in the Ger Camp <br/> Meals: Breakfast, lunch and dinner</em></strong></p>
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 12 Bayanzag to Ongi Temple</div>
+                                <div class="box_title">Day 10 Bayanzag to Ongi Temple</div>
                                 <div class="box_content">
                                     <p>Drive to Ongi temple. The ruins of Ongi Temple are found in Saikhan Ovoo soum of Dundgobi (Middle Gobi) province. It used to be a big Buddhist monastery compound built by Bari Yonzon Khamba at the bank of Ongi River. Transfer to the camp before the lunch. Visit the ruins of temple also there is small ger museum signifies ancient things.</p>
                                     <p><strong><em> Overnight in the Ger Camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
@@ -167,7 +167,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 13 Ongi temple to Karakorum (Erdenezuu monastery)</div>
+                                <div class="box_title">Day 11 Ongi temple to Karakorum (Erdenezuu monastery)</div>
                                 <div class="box_content">
                                     <p>Early morning drive to Karakorum and arrive late afternoon, on the way picnic.  Ancient capital of Mongolia Karakorum city was located on the right bank of Orkhon River and on the north-eastern slopes of the Khangai Mountain and founded by Chinggis khan in 1220, was not only the capital of the vast Mongolian Empire but the epicentre of trade along the Silk Road. At that time the inhabitants of city were mostly Merchants craftsmen who came to karakorum from all over the world. Khubilai khan moved to the capital of the Mongolian Empire to China, establishing the Yuan Dynasty, began losing its importance.  In 1379 much of the city was badly damaged during an attack by the army of the Min Dynasty.
                                         <br/><strong> Erdene Zuu monastery</strong>
@@ -179,7 +179,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 14 Karakorum (Erdenezuu monastery) to Hustai National park</div>
+                                <div class="box_title">Day 12 Karakorum (Erdenezuu monastery) to Hustai National park</div>
                                 <div class="box_content">
                                     <p>Drive to Hustai National Park Hustai National Park is the site of a unique re-introduction scheme of Przewalskii’s horse (Equus przewalskii), called "takhi" by Mongolians. It became extinct in the wild in 1969 and, since 1992, has been successfully re-introduced to Hustai from zoos around the world. This has been an international effort monitored by The Foundation for the Przewalskii Horse, based in the Netherlands and MACNE (Mongolian Association for Conservation of Nature and the Environment). The national park is rolling Steppe Mountains with rather large patches of birch and aspen forests. There are also visible remains of Neolithic graves. In addition, red deer (Cervus elaphus) and wolf (Canis lupus) have increased quite a bit during the last few years, as well as Mongolian gazelle. Species present in Hustai but usually not seen include Lynx, Argali Sheep and Roe Deer. </p>
                                     <p><strong><em> Overnight in the Ger Camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
@@ -188,7 +188,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 15 Ulaan Baatar: Bogdo Khaan Winter Palace</div>
+                                <div class="box_title">Day 13 Ulaan Baatar: Bogdo Khaan Winter Palace</div>
                                 <div class="box_content">
                                     <p>After breakfast, we will drive to Ulaanbaatar and transfer to hotel.  Visit the Bogd Khaan Winter Palace Museum. The Bogdo Khaan Winter Palace is the home of the last Mongolian King, Javzun Damba Khutagt VII. The museum contains a number of Buddhist artworks and the private collection of Bogdo Khaan, composed of gifts from rulers and kings from all over the world. The artworks displayed here were made by the top Mongolian, Tibetan, and Chinese master-sculptors of the 18th and 19th centuries and represent the gods of Buddhist pantheon. In the afternoon free time do shopping for cashmere shop, souvenir shop and State Department Store. Enjoy watch national folklore performance by “Tumen Ekh” national song, throat singing, tsam mask dance and so on. A farewell dinner and stay overnight in hotel.</p>
                                     <p><strong><em> Meals: Breakfast, Lunch, Dinner<br/>lodging: 4 star hotel </em></strong></p>
@@ -197,7 +197,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 16 Departure</div>
+                                <div class="box_title">Day 14 Departure</div>
                                 <div class="box_content">
                                     <p>Check out from the hotel and transfer to the “Chinggis Khan” International airport for departure. </p>
                                     <div class="clear"></div>
