--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -49,6 +49,13 @@
                             </div>
                         </div>
 
+                        <div class="form_col_1" style="margin-right: 30px;">
+                            <div class="row alignleft field_text">
+                                <label class="label_title">Phone:</label>
+                                {{ form_widget(form.phone, { 'attr': {'class': 'inputField required', 'placeholder':'Your Phone - Required'} }) }}
+                            </div>
+                        </div>
+
                         <div class="form_col_2">
                             <div class="row">
                                 <label class="label_title">Message:</label>
