--- a/resources/views/Page/request_catalog.html.twig
+++ b/resources/views/Page/request_catalog.html.twig
@@ -28,7 +28,7 @@
 
     <div class="entry">
         <div class="contact_box">
-            <h2>BOOKING</h2>
+            <h2>REQUEST A CATALOG</h2>
 
             <div class="box_content clearfix">
                 <form method="post" action="{{ path('catalog_send') }}">
