--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -69,6 +69,7 @@
                             {% else %}
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
+                            <a class="btn btn_green" href="{{ path('catalog') }}"><span>CATALOG</span></a>
 
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
@@ -163,6 +164,7 @@
                             {% else %}
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
+                            <a class="btn btn_green" href="{{ path('catalog') }}"><span>CATALOG</span></a>
                             <script type="text/javascript">var addthis_config = {'services' : 'facebook,twitter,email,more', "data_track_addressbar":true};</script>
                             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52b596d25b76435f"></script>
 
