--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -143,6 +143,7 @@
                         <li><a href="{{ path('tour_show', {'slug' : slug}) }}"><span>{{ tour.name }} ({{ tour.duration2 }})</span></a></li>
                     {% endfor %}
                 </ul>
+                <a href="{{ path('catalog') }}"><img src="/images/request_catalog.jpg" alt="Request a catalog"/></a>
             </div>
 
             <div class="f_col f_col_3" style="width: 140px;">
