--- a/web/custom.css
+++ b/web/custom.css
@@ -6,3 +6,4 @@
 .latest_offers {background: #d8dde2;border-top: 3px solid #f1f1f1;border-bottom: 3px solid #f1f1f1;}
 .latest_offers .latest_item img {height: 62px !important;}
 .latest_offers .prev, .latest_offers .next { top: 0;}
+.btn span { padding: 0 20px;}
