--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -73,7 +73,7 @@
                             <div class="widget-container widget_featured_posts">
                                 <ul>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Naadam Festival Journey<br/>(12 days, 11 nights)</a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Taste of Mongolia with Naadam Festival<br/>(12 days, 11 nights)</a></div>
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/featured_thumb_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
