--- a/resources/views/Tour/gobi_desert_tour.html.twig
+++ b/resources/views/Tour/gobi_desert_tour.html.twig
@@ -186,6 +186,10 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$1995 for 2-5 PAX</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
