--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -74,49 +74,59 @@
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 1 Ulaanbaatar (City tour)</div>
+                                <div class="box_title">Day 1 ~Arrival in Ulaanbaatar, Mongolia</div>
                                 <div class="box_content">
-                                    <p>Arrive at Ulaanbaatar. Meet your Guide at the airport and transfer to the hotel. We will star city tour the first stop is Sukhbaatar Square, the central square named after the revolutionary hero of 1921 Damdiny Sukhbaatar who declared independence from China. We visit Gandan Monastery the largest and most famous functioning monastery in Mongolia; here we may experience monks in worship and see the impressive Golden Buddha Statue of Migjid Janraisig. Time permitting Natural History Museum which is famous for its authentic dinosaur skeletons and and visit Zaisan memorial hill to view of whole city from there. Welcome dinner at restaurant and stay overnight in hotel. (B, L, D)</p>
+                                    <p>Upon arrival at Genghis Khan International Airport, you are met by our guide and transferred to the hotel in the city center.</p>
+                                    <p>Rest of the day is for rest and to recover jet lag and travel fatigue.</p>
+                                    <p><strong><em>Overnight in 4* HOTEL <br/>Meals: Dinner </em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 2 Ulaanbaatar Khuvsgul Lake (Murun province)</div>
+                                <div class="box_title">Day 2 ~ Cultural Tour of Ulaanbaatar </div>
                                 <div class="box_content">
-                                    <p>In the morning, fly to the capital of Khuvsgul province Murun. The flight takes one and a half hours. Drive to Khuvsgul national park. Transfer to the camp and lunch. Visit with yak breeding family. Stay overnight in ger at the tourist camp. (Ger means Mongolian traditional felt accommodation). (B, L, D)</p>
+                                    <p>Following breakfast, we set out to explore Ulaanbaatar-the capital city of Mongolia-the home to over a one third of the country's population where the traditional gers and Buddhist temples coexist with sky-kissing towers! Begin from the Gandan Monastery-Mongolia's most revered religious site-home to more than 100 Buddhist monks with beautiful chapels, courtyards and a giant 75-foot gold gilded Buddha statue. </p>
+                                    <p>Next, we stop in the Natural History Museum that showcases the spectacular fossils found in the Gobi desert. After lunch, we visit the National Museum of Mongolian History and culture that has rich collection of stone and Bronze Age artifacts, costumes, sacred relics and items related to the nomadic life such as hunting and fishing tools.</p>
+                                    <p>The balance of the day is open for you to stroll the streets of the city on your own. </p>
+                                    <p><strong><em>Overnight in 4* HOTEL <br/>Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 3 Discover Khuvsgul National park</div>
+                                <div class="box_title">Day 3 To Lake Khovsgul in the North</div>
                                 <div class="box_content">
-                                    <p>During whole lovely day, you have an opportunity to ride reindeer and observe them. Kayak trip on the lake. Khuvsgul Lake is reckoned among the purest fresh water lakes in the world. Its surroundings right out of a fairytale. Khuvsgul Lake is the second deepest lake in Central Asia and contains 60% as much water as Lake Baikal. Depth of Khuvsgul Lake is 262 meters and 136 kilometers long.  Stay overnight in ger at the tourist camp. (B, L, D)</p>
+                                    <p>Following breakfast, we are transferred to the airport for flight to Muron in the north. Muron is the headquarter of the Khovsgul Province. We meet our local guide at the airport and then we drive by 4WD vehicle through the vast Mongolian steppe into the forested mountains and finally we arrive at the Lake Khovsgul-Mongolia's largest lake. The lake, also known as the "Dark Blue Pearl" of Mongolia is situated amidst the pristine nature with beautiful forests, mountains and meadows and abundant with bird species and orchids. </p>
+                                    <p><strong><em>Overnight in the Ger Camp <br/>Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 4 Khuvsgul National park to Khuvsgul Lake (Murun province)</div>
+                                <div class="box_title">Day 4 Discover Khuvsgul National park</div>
                                 <div class="box_content">
-                                    <p>In the morning we will drive to Murun province and transfer to local hotel where we will stay overnight. (B, L, D)</p>
+                                    <p>During whole lovely day, you will have an opportunity to ride reindeer and observe them. We spend the next two days in walking, hiking, horseback riding in the environs of the lake and the nearby mountains and visiting the local nomadic families. Optional boating trip is available on request. </p>
+                                    <p>Khuvsgul Lake is reckoned among the purest fresh water lakes in the world. Its surroundings right out of a fairytale. Khuvsgul Lake is the second deepest lake in Central Asia and contains 60% as much water as Lake Baikal. Depth of Khuvsgul Lake is 262 meters and 136 kilometers long.  </p>
+                                    <p><strong>Walking and hiking in the lake shores, Horse riding trek near the lake, visiting yak breeding family and experience their unique lifestyle</strong></p>
+                                    <p><strong><em>Overnight in the Ger Camp <br/>Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 5 Khuvsgul Lake (Murun province) to Ulaanbaatar</div>
+                                <div class="box_title">Day 5 Back to Ulaanbaatar. </div>
                                 <div class="box_content">
-                                    <p>We will fly back to Ulaanbaatar. Transfer to the hotel and lunch at the finest restaurant in Ulaanbaatar. In the afternoon free time do shopping for cashmere shop, souvenir shop and State Department Store. Enjoy watch national folklore performance by “Tumen Ekh” national song, throat singing, tsam mask dance and so on. A farewell dinner and stay overnight in hotel.</p>
+                                    <p>Following breakfast, transfer back to the airport and fly to Ulaanbaatar. There is more to see if you are interested. Visit the Bogd Khan Winter Palace Museum-residence of Bodg Jabzan Damba Hutagt VIII-Mongolia's last theocrat. Or take leisurely stroll in the town center. In the evening, enjoy dinner and local folklore dance shows.</p>
+                                    <p><strong><em>Overnight in 4* HOTEL <br/>Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Day 6 Departure</div>
+                                <div class="box_title"> Day 6 Depart Mongolia </div>
                                 <div class="box_content">
-                                    <p>Check out from the hotel and transfer to the “Chinggis Khan” International airport or train station for departure. </p>
+                                    <p>Transfer to the airport for flight to next destination</p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
@@ -177,6 +187,10 @@
                         <b style="color: #B28E1B">Available time:</b> <span>{{ tour.availableTime }}</span>
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
+                        <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$1865 for 2-5 PAX</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
                         <br/>
                     </div>
                     <!--/ widget_categories -->
