--- a/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
+++ b/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
@@ -74,7 +74,7 @@
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July – 5 Day 1 Arrive in Ulaanbaatar</div>
+                                <div class="box_title">July – 2 Day 1 Arrive in Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Upon arrival at Chinggis Khan International Airport, you are met by tour guide and transferred to the hotel in the city center.
                                         <br/><strong> Blue Sky Hotel:</strong>
@@ -86,7 +86,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July – 6 Day 2 Cultural tour</div>
+                                <div class="box_title">July – 3 Day 2 Cultural tour</div>
                                 <div class="box_content">
                                     <p>After breakfast at hotel, you will go on a sightseeing city tour. The first stop is at Sukhbaatar Square, which is the central square named after the revolutionary hero of 1921 Damdiny Sukhbaatar whom declared independence from China. You will visit the Gandan Monastery that is the largest and most famous functioning monastery in Mongolia; here you may experience the monks in worship and see the impressive Golden Buddha Statue of Migjid Janraisig. Time permitting you can visit the Natural History Museum which is famous for its authentic dinosaur skeletons and also visit the Zaisan memorial hill to get a fantastic view of whole city. You will have a welcome dinner at local restaurant.</p>
                                     <p><strong><em> Overnight in Blue Sky Hotel or similar <br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
@@ -95,7 +95,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July – 7 Day 3 Flight to Gobi Desert, Yol Valley</div>
+                                <div class="box_title">July – 4 Day 3 Flight to Gobi Desert, Yol Valley</div>
                                 <div class="box_content">
                                     <p>This morning you fly over the vast steppe to the Gobi Desert, Mongolia’s southernmost province of semi-arid desert. Meet your driver upon arrival and then transfer by a 4WD vehicle to the Yol Valley in Gurvansaikhan National Park, situated in the lap of the Altai Mountains. On the way to the lodge, you will stop to visit the local Natural History Museum for an insight into the flora and fauna of the area. This valley is nestled deep within the hills and is a safe haven to get away from the desert heat. Some areas of the valley are continually sheltered from the hot sun and house huge, blocks of ice that gradually melt away during the summer. It is very wide at the entrance and narrows gradually into a remarkable gorge. You will get to see wild animals such as ibex and wild sheep, and the vulture. You can hike on foot or go horseback or camel riding around the area to the gorge.</p>
                                     <p><strong>Check into the Three Camels Lodge which is among the TOP ECO LODGES OF THE WORLD.</strong>The lodge is solar powered and stands ground on a stunning landscape with sweeping views of the Gobi-Altai been built using all local sustainable materials.</p>
@@ -105,7 +105,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July – 8 Day 4 Day trip to Flaming Cliffs and Moltsog Sand Dune</div>
+                                <div class="box_title">July – 5 Day 4 Day trip to Flaming Cliffs and Moltsog Sand Dune</div>
                                 <div class="box_content">
                                     <p>Following breakfast at tourist camp then we will drive to Bayan Zag(Approximately 5 hours driving), popularly called “The Flaming Cliffs” for its glowing orange rocks. It was here, in 1922, that paleontologists made an astounding discovery. This area got international name as Roy Chapman Andrews after  his exploration team from the American Museum of Natural History discovered the first nest of dinosaur eggs here. The area is haven for the natural history scientists as the area is rich in dinosaur fossils. After Bayanzag zag we head to Moltsog Els, is one of the few regions of the Gobi covered by sand dunes. Smaller than Hongoryn Els, these sand dunes are much closer to the Three Camel Lodge, You can visit a camel herder’s family and will have an opportunity to ride a Bactrian camel.</p>
                                     <p><strong><em>Overnight in Three Camel Lodge, deluxe ger  <br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
@@ -114,7 +114,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 9 - Day 5 Take flight back to Ulaanbaatar and Terelj National Park</div>
+                                <div class="box_title">July 6 - Day 5 Take flight back to Ulaanbaatar and Terelj National Park</div>
                                 <div class="box_content">
                                     <p>We will drive to airport for flight back to Ulaanbaatar and you are transferred to Terelj National park. This unforgettable excursion will take you to features such as unique rock formations, scenic valleys, a winding river, and restful groves of trees. Many nomads live in the park itself, where they find lush grazing land for their animals. You will take a tour in the park and visit the notable rocks called "The Turtle rock", and “Monk reading a book". You will visit the Aryabal meditation center located inside the mountains to learn more about Mongolian Buddhism.</p>
                                     <p><em>TERELJ LUXURY HOTEL
@@ -127,7 +127,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July – 10 Day 6  Travel to Hustai National Park</div>
+                                <div class="box_title">July – 7 Day 6  Travel to Hustai National Park</div>
                                 <div class="box_content">
                                     <p>After arrive in ULN we drive to Hustai National Park Hustai National Park is the site of a unique re-introduction scheme of Przewalskii’s horse (Equus przewalskii), called "takhi" by Mongolians. It became extinct in the wild in 1969 and, since 1992, has been successfully re-introduced to Hustai from zoos around the world. This has been an international effort monitored by The Foundation for the Przewalskii Horse, based in the Netherlands and MACNE (Mongolian Association for Conservation of Nature and the Environment). The national park is rolling Steppe Mountains with rather large patches of birch and aspen forests. There are also visible remains of Neolithic graves. In addition, red deer (Cervus elaphus) and wolf (Canis lupus) have increased quite a bit during the last few years, as well as Mongolian gazelle. Species present in Hustai but usually not seen include Lynx, Argali Sheep and Roe Deer. The Hustai National Park in Mongolia is world famous for the successful reintroduction of the Prezwalski horse. After lunch at tourist camp, we will drive to HS Luxury Resort for a night.</p>
                                     <p><em>HS KHAAN LUXURY RESORT
@@ -139,16 +139,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 11-12 Day 7-8 Naadam Festival, Openning Ceremony </div>
-                                <div class="box_content">
-                                    <p>During whole lovely days you enjoy watch Naadam festival or three manly sports such as wrestling, archery and horse racing. Visit opening ceremony of Naadam festival at the national stadium. And you will see archery, wrestling and horse racing during Naadam festival. Naadam festival is of the victory of the People’s Revolution. Naadam festival is celebrated every year at 11-13th July in Central stadium. Mongolia celebrates its independence and its rich cultural heritage with a festival of sports and revelry in Ulaanbaatar. The distinctly Mongolian feel and flair of the Naadam Festival make it a wonderful spectacle, a joyous time, and an intriguing cultural event. Colorful ceremonies and parading soldiers kick off the celebrations. The ancient game of wrestling follows, with men competing in many rounds of competition. Both men and women compete in the archery games, using the traditional Mongolian compound bow that terrorized Europe when Genghis Khan and his Golden Horde moved their empire west. The quintessentially Mongolian art of horse racing follows, where up to 800 horses compete, jockeyed by children so that the skill of the horse, and not the rider, is tested.</p>
-                                    <p><strong><em> Overnight in Blue Sky Hotel or similar <br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
-                                    <div class="clear"></div>
-                                </div>
-                            </div>
-
-                            <div class="sb sb_brown">
-                                <div class="box_title">July 13 - Day 9 Take a flight to Khuvsgul Lake</div>
+                                <div class="box_title">July 8 - Day 7 Take a flight to Khuvsgul Lake</div>
                                 <div class="box_content">
                                     <p>Following breakfast, you are transferred to the airport for your 1.2 hour flight to Muron in the north. Muron is the headquarters of the Khuvsgul Province. You will meet your local guide at the airport and then transfer by a 4WD vehicle through the vast Mongolian prairieland into the forested mountains until finally arriving at Lake Khuvsgul (4 hour drive). It is Mongolia's largest fresh water lake, also known as the "Dark Blue Pearl" of Mongolia is situated amidst pristine nature, beautiful forests, mountains, meadows, abundant with bird species, and orchids.</p>
                                     <p><strong><em> Overnight at Alagtsar Tourist camp, Deluxe villa<br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
@@ -157,7 +148,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 14 - Day 10 Explore pristine Khuvsgul Lake</div>
+                                <div class="box_title">July 9 - Day 8 Explore pristine Khuvsgul Lake</div>
                                 <div class="box_content">
                                     <p>After breakfast at the camp you will have a full day to explore the breathtaking shores of this beautiful lake.  There is ample opportunity to discover the local nomadic lifestyle. You can plan hiking and photo ventures along the shorelines, which are excellent habitats for wildlife and birds.
                                         <br/> Walking and hiking in the lake shores, Horse riding trek near the lake, visiting yak breeding family and experience their unique lifestyle.
@@ -168,7 +159,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 15 - Day 11 Flight back to Ulaanbaatar</div>
+                                <div class="box_title">July 10 - Day 9 Flight back to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>In the morning, we drive to airport for flight to Ulaanbaatar and there is more to see here upon arrival if you are interested, such as a visit to the Bogd Khan Winter Palace Museum, a residence of Bodg Jabzan Damba Hutagt VIII whom was Mongolia's last theocrat. Or take a leisurely stroll through the town center. In the evening perhaps you can enjoy a farewell dinner and attend the local folklore dance shows.</p>
                                     <p><strong><em> Overnight in Blue Sky Hotel or similar <br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
@@ -177,10 +168,18 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 16 - Day 12 Departure </div>
+                                <div class="box_title">July 11-12 - Day 10-11 Naadam Festival, Openning Ceremony </div>
+                                <div class="box_content">
+                                    <p>During whole lovely days you enjoy watch Naadam festival or three manly sports such as wrestling, archery and horse racing. Visit opening ceremony of Naadam festival at the national stadium. And you will see archery, wrestling and horse racing during Naadam festival. Naadam festival is of the victory of the People’s Revolution. Naadam festival is celebrated every year at 11-13th July in Central stadium. Mongolia celebrates its independence and its rich cultural heritage with a festival of sports and revelry in Ulaanbaatar. The distinctly Mongolian feel and flair of the Naadam Festival make it a wonderful spectacle, a joyous time, and an intriguing cultural event. Colorful ceremonies and parading soldiers kick off the celebrations. The ancient game of wrestling follows, with men competing in many rounds of competition. Both men and women compete in the archery games, using the traditional Mongolian compound bow that terrorized Europe when Genghis Khan and his Golden Horde moved their empire west. The quintessentially Mongolian art of horse racing follows, where up to 800 horses compete, jockeyed by children so that the skill of the horse, and not the rider, is tested.</p>
+                                    <p><strong><em>Overnight in Blue Sky Hotel or similar <br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
+                                    <div class="clear"></div>
+                                </div>
+                            </div>
+
+                            <div class="sb sb_brown">
+                                <div class="box_title">July 13 - Day 12 Departure</div>
                                 <div class="box_content">
                                     <p>Check out from the hotel and transfer to the “Chinggis Khan” International airport for departure.</p>
-                                    <p><strong><em> <br /> </em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
@@ -232,12 +231,9 @@
 
                     <!-- widget_recent_comments -->
                     <div class="widget-container widget_popular">
-                        <h3 class="widget-title">Highlights</h3>
-                        <ul>
-                            {% for highlight in tour.highlights %}
-                            <li><a href="javascript:;">{{ highlight }}</a></li>
-                            {% endfor %}
-                        </ul>
+                        <h3 class="widget-title">Testimonial</h3>
+                        <p style="text-align: justify"><em>Everything about the trip was great! Operated smoothly if a problem arose, Travel All Mongolia resolved the issue immediately. Additional, unexpected activities the enhanced the program were added. Bulgaa was fantastic! One of the best guides i have had. Drivers were fun caring and had really great driving skills. Road were difficult and bumpy but drivers did an excellent job maneuvering vehicles. Overall, Travel All Mongolia did an excellent job providing top quality service that allowed me to thoroughly enjoy this beautiful country without having to worry about logistics. Our guide handled everything flawlessly! The drivers were awesome. I hope to come back in the near future and spend more time exploring.
+                                <br/> <strong>Kerina Rowley, USA</strong></em></p>
                     </div>
                     <!--/ widget_recent_comments -->
 
