--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -34,13 +34,13 @@
                     <p>1</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'naadam-festival-journey' }) }}">Naadam festival Journey</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-with-naadam-festival' }) }}">A Classic Journey with Naadam Festival</a></p>
                 </td>
                 <td>
-                    <p>5<sup>th</sup> of July</p>
+                    <p>9<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>16<sup>th</sup> of July</p>
+                    <p>23<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
                     <p>10 persons</p>
@@ -52,7 +52,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'naadam-festival-journey' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             <tr>
@@ -60,16 +60,16 @@
                     <p>2</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-with-naadam-festival' }) }}">A Classic Journey with Naadam Festival</a></p>
                 </td>
                 <td>
-                    <p>21<sup>st</sup> of June</p>
+                    <p>29<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>2<sup>nd</sup> of July</p>
+                    <p>13<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>11-15 persons</p>
+                    <p>10 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -78,7 +78,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary">Download detailed itinerary</a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             <tr>
@@ -86,16 +86,16 @@
                     <p>3</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'splendors-of-mongolia' }) }}">Splendors of Mongolia</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>16<sup>th</sup> of July</p>
+                    <p>20<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>25<sup>th</sup> of July</p>
+                    <p>29<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>11-15 persons</p>
+                    <p>10 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -104,7 +104,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'splendors-of-mongolia' }) }}" title="Download detailed itinerary">Download detailed itinerary</a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             <tr>
@@ -112,16 +112,16 @@
                     <p>4</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'highlights-of-mongolia' }) }}">Highlights of Mongolia</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>28<sup>th</sup> of July</p>
+                    <p>1<sup>st</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>6<sup>th</sup> of August</p>
+                    <p>10<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>11-15 persons</p>
+                    <p>10 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -130,7 +130,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'highlights-of-mongolia-july' }) }}" title="Download detailed itinerary">Download detailed itinerary</a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             <tr>
@@ -138,16 +138,16 @@
                     <p>5</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'highlights-of-mongolia' }) }}">Highlights of Mongolia</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>1<sup>st</sup> of Sep</p>
+                    <p>15<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>10<sup>th</sup> of Sep</p>
+                    <p>28<sup>th</sup> of June, 2015</p>
                 </td>
                 <td>
-                    <p>10-15 persons</p>
+                    <p>10 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -156,7 +156,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'highlights-of-mongolia-sep' }) }}" title="Download detailed itinerary">Download detailed itinerary</a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             <tr>
@@ -164,16 +164,16 @@
                     <p>6</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'splendors-of-mongolia' }) }}">Splendors of Mongolia</a></p>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>9<sup>th</sup> of August</p>
+                    <p>25<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>18<sup>th</sup> of August</p>
+                    <p>7<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>10-15 persons</p>
+                    <p>10 persons</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -182,7 +182,241 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'splendors-of-mongolia' }) }}" title="Download detailed itinerary">Download detailed itinerary</a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>7</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>23<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>8</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>1<sup>st</sup> of September, 2015</p>
+                </td>
+                <td>
+                    <p>14<sup>th</sup> of September, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>9</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}">Taste of Mongolia with Naadam Festival</a></p>
+                </td>
+                <td>
+                    <p>2<sup>nd</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>13<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>10</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}">Taste of Mongolia with Naadam Festival</a></p>
+                </td>
+                <td>
+                    <p>9<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>11</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of June, 2015</p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of June, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>12</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>17<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>26<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>13</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">Treasures of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>29<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'treasures-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>14</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">Treasures of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of August, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'treasures-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>15</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}">Luxury tour with Naadam Festival</a></p>
+                </td>
+                <td>
+                    <p>2<sup>nd</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>13<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>10 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
             </tr>
             </tbody>
