--- a/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
@@ -236,6 +236,10 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$3345</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$590</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
