--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -186,6 +186,10 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$2895</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
