--- a/resources/views/Tour/motor-bike-tour.html.twig
+++ b/resources/views/Tour/motor-bike-tour.html.twig
@@ -199,6 +199,8 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>Privately on Request</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
