--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -215,6 +215,10 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$3295</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
