--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -194,6 +194,10 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
+                        <b style="color: #B28E1B">Price:</b> <span>$2995</span>
+                        <br/>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
