--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -21,4 +21,10 @@
         Ulaanbaatar, Mongolia<br>
     </address>
 
+    <address>
+        <strong><i class="icon-pushpin"></i> Office in United States:</strong>
+        2015 Diamond Drive, <br/>
+        Sebring Florida, FL 33875
+    </address>
+
 </div><!--end contact-info-->
