--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -85,6 +85,10 @@
                 {% include 'Page/_contact_information.html.twig' %}
             </div>
         </div>
+
+        <div>
+            <a href="{{ path('catalog') }}"><img src="/images/request_catalog.jpg" alt="Request a catalog"/></a>
+        </div>
     </div>
     <!--/ sidebar -->
 
