--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -21,9 +21,21 @@
         Ulaanbaatar, Mongolia<br>
     </address>
 
+</div>
+<br/>
+<div class="contact-info">
+    <div class="titleHeader clearfix">
+        <h3>Office in United States</h3>
+    </div><!--end titleHeader-->
+
     <address>
-        <strong><i class="icon-pushpin"></i> Office in United States:</strong>
-        2015 Diamond Drive, <br/>
+        <strong><i class="icon-phone"></i> Day time phone:</strong> ...<br/>
+        <strong><i class="icon-phone"></i> Evening phone:</strong> ...<br/>
+    </address>
+
+    <address>
+        <strong><i class="icon-pushpin"></i> Address Info:</strong>
+        5201 Diamond Drive, <br/>
         Sebring Florida, FL 33875
     </address>
 
