--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -33,8 +33,8 @@
                             <div class="widget-container widget_featured_posts">
                                 <ul>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">Treasures of Mongolia<br/>(11 days, 10 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/featured_thumb_bayanzag.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival'}) }}">A Classic Journey of Mongolia with Naadam Festival (15 days, 14 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival'}) }}"><img src="/images/featured_thumb_classic_naadam.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'gobi-desert-tour'}) }}">Gobi Desert tour <br/>(7 days, 6 nights)</a></div>
@@ -57,8 +57,8 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia'}) }}"><img src="/images/featured_thumb_taste.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'horse-trip-around-khuvsgul-lake'}) }}">Horse trip around Khuvsgul lake <br/>(8 days, 7 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'horse-trip-around-khuvsgul-lake'}) }}"><img src="/images/featured_thumb_khuvsgul.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">Treasures of Mongolia<br/>(11 days, 10 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/featured_thumb_bayanzag.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia<br/>(14 days, 13 nights)</a></div>
