--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -29,8 +29,7 @@
     </div><!--end titleHeader-->
 
     <address>
-        <strong><i class="icon-phone"></i> Day time phone:</strong> ...<br/>
-        <strong><i class="icon-phone"></i> Evening phone:</strong> ...<br/>
+        <strong><i class="icon-phone"></i>Phone:</strong> 863-273-3527<br/>
     </address>
 
     <address>
